# whispypy

./: .gitignore  README.md  config.conf.example  mypy.ini  pyproject.toml  ruff.toml  send_signal.sh  test_audio_devices.py  whispypy-daemon.py
.github/: copilot-instructions.md
src/whispypy/: __main__.py
